redid the button disabling for forms, fixed margin for all events so that filter dont cause weird spacing, swap out event poster for event card in search result, improved some css

--- a/rpi-eventhub/frontend/src/pages/Events/AllEventPage/AllEvents.module.css
+++ b/rpi-eventhub/frontend/src/pages/Events/AllEventPage/AllEvents.module.css
@@ -7,11 +7,12 @@
 
 .eventsDisplayContainer {
     width: 100%;
-    margin: auto;
+    margin: 0;
     margin-bottom: 100px;
-    padding-top: 148px;
-    padding-left: 200px;
+    /* padding-top: 148px; */
+    padding-left: 10%;
     box-sizing: border-box;
+    margin-top: 10%;
 }
 
 .filterContainer {
